samples/_failures_safe/1761719742_0f98e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6dd463a2.c: In function ‘main’:
./samples/SAFE/__tmp_6dd463a2.c:137:5: error: expected declaration or statement at end of input
  137 |     printf("Adding compression blocks...\n");
      |     ^~~~~~
